# atmla-email-digest-converter

./: .gitignore  README.md  email_convert.py  email_splitter.py  pyproject.toml
tests/: test_email_convert.py
