[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atmla-email-digest-converter"
version = "0.1.0"
description = "Python utilities for converting AtMLA ListServ email digests into HTML files."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
dependencies = []
